--- a/other/settings.ini
+++ b/other/settings.ini
@@ -6,7 +6,7 @@ ReloadOnServer=0
 ServerPort=26196
 LastUsedPlugin=0
 [Plugin0]
-PluginName=Assassination
-SourceFilePath=C:\Users\Jonathan\Documents\SourceMod Scripts\Assassination\Assassination.sp
-IntermediateFilePath=C:\Users\Jonathan\Documents\SourceMod Scripts\Assassination\intermediate\Assassination.smx
-FinalFilePath=C:\Users\Jonathan\Documents\SourceMod Scripts\Assassination\release\addons\sourcemod\plugins\Assassination.smx
+PluginName=TFBiohazard
+SourceFilePath=C:\Users\Vesper\Documents\GitHub\smplugins\TFBiohazard\development\addons\sourcemod\scripting\TFBiohazard.sp
+IntermediateFilePath=C:\Users\Vesper\Documents\GitHub\smplugins\intermediate\TFBiohazard.smx
+FinalFilePath=C:\Users\Vesper\Documents\GitHub\smplugins\TFBiohazard\development\addons\sourcemod\plugins\TFBiohazard.smx
