Various refinements to UCC

--- a/other/settings.ini
+++ b/other/settings.ini
@@ -1,12 +1,12 @@
 [Settings]
-ExeFilePath=D:\SourceMod\addons\sourcemod\scripting\spcomp.exe
+ExeFilePath=C:\Program Files (x86)\Steam\steamapps\common\Team Fortress 2\tf\addons\sourcemod\scripting\spcomp.exe
 IncludeFolderPath=
 ExeTimeout=10
 ReloadOnServer=0
 ServerPort=26196
 LastUsedPlugin=0
 [Plugin0]
-PluginName=TFBiohazard
-SourceFilePath=C:\Users\Vesper\Documents\GitHub\smplugins\TFBiohazard\development\addons\sourcemod\scripting\TFBiohazard.sp
-IntermediateFilePath=C:\Users\Vesper\Documents\GitHub\smplugins\intermediate\TFBiohazard.smx
-FinalFilePath=C:\Users\Vesper\Documents\GitHub\smplugins\TFBiohazard\development\addons\sourcemod\plugins\TFBiohazard.smx
+PluginName=UltimateChickenCow
+SourceFilePath=C:\Users\Vesper\Documents\GitRepos\smplugins\UltimateChickenCow\release\addons\sourcemod\scripting\ultimate-chicken-cow\ultimate-chicken-cow.sp
+IntermediateFilePath=C:\Users\Vesper\Documents\GitHub\smplugins\intermediate\ultimate-chicken-cow.smx
+FinalFilePath=C:\Users\Vesper\Documents\GitRepos\smplugins\UltimateChickenCow\release\addons\sourcemod\plugins\ultimate-chicken-cow.smx
